styles.css
/* ... */
body.bodybg { background:url(background.gif) 2% 0% repeat-x #4D4D4D; color: #444444; }

/* Generated popup body */
body > font { background:#FFFFFF; font-size:1.3em; line-height:2em; margin-left:3px; }

body > br { line-height:0px; }

body > div { background:#FFFFFF; padding-bottom:10px; padding-top:10px; }

body > div.mylistsSavePage { background:none; padding-bottom:0px; padding-top:0px; }

body > span { margin-top:-20px; }

body > a, body > p, body > h1, body > h2, body > h3, body > h4 { margin-left:3px; }

body > * { text-align:left;}

caption { border-bottom:1px solid #D3D3D3; font-weight:bold; text-align:center; }

center a {text-decoration:none;}

div center table { border-color:#D3D3D3; margin-top:10px; margin-bottom:10px; }

div.pageContent > a:link, div.pageContent > a:visited, div.pageContent > a:active, div.pageContent > a:hover { margin:10px; }

html { height:100%; width:100%;}

form a { display:table-cell; display:inline-block; }

/* This rule causes search form elements to resize along with the rest of the text on the page if the user resizes text. */
input, select, textarea { font-size:.97em; }

/* This rule uses CSS2 to give a nicer effect in compliant browsers, while avoiding an annoying display effect in Internet Explorer 6 */
input[type="checkbox"] { background-color: #FFF8EF; }

legend { color:#444444; }

strong { font-weight: bold; }

/*Global styles for status message pages.*/

.pageContent > strong { display:block; width:50%; margin: 20px; }

pre { margin-left:15px; }

strong .button { display:block; font-weight:normal; margin-top:15px; }

.pageContent > h1 { margin:30px 0 10px 20px; font-size:1.1em; }

.pageContent > a > div { margin-left:20px; }

.pageContent p { margin-left:20px; }

.pageContentInner p { margin-left:0px; }

.pageContentColumn {
float:right;
margin-left:1%;
padding:1%;
width:71%;
}

/* end status message area */

table { border-collapse:collapse; }

td { font-family:"Trebuchet MS",Verdana,Arial,Helvetica,sans-serif; font-style: normal; font-weight : normal; }

th { font-family:"Trebuchet MS",Verdana,Arial,Helvetica,sans-serif; }

/* traditional link colors are suggested for better usability */
a:link { color: #003D6A; }
a:active { color: #0096A7; }
a:visited { color: #0096A7; }
a:hover  { color: #0096A7; }

/* Section 2 */
/* named styles listed in alphabetical order */
#accessibleForm { font-family:"Trebuchet MS",Verdana,Arial,Helvetica,sans-serif; }
#accessibleForm fieldset { border: 1px solid #CCCCCC; }
#accessibleForm form legend { font-weight:bold; }
#accessibleForm h2 { margin-left:15px; margin-bottom:0; margin-top:12px }
#accessibleForm span.formLabel { display:block; padding-top:3px; }
#accessibleForm span.formLabelExample { font-style:italic; }
#accessibleForm .formEntryArea, #accessibleForm .ecommerceFormEntryArea { margin:3px 0 0 15px; }
#accessibleForm .formButtonArea .formButtonArea {margin-left:12px; display:inline;}
#accessibleForm font { font-size:1em; padding:10px; }
#accessibleForm p { margin-bottom:5px; margin-top:3px; }
#accessibleForm ul { margin-left:10px; margin-top:0px; padding-left:15px; }
.accessibleAddInfo { position:absolute; left:-10000px; top:auto; width:1px; height:1px; overflow:hidden; } /*Include in screenreader but not visible*/

.formButtonArea { margin:12px 0 0 15px; }
.formButtonArea a, .requestMultiPatform center a, .mylistsSavePage a { text-decoration:none; }
.formButtonArea input { margin:5px 0; }
.formEntryArea { }
.formRequired { color:#990000;font-weight:bold;font-size:1.3em;position:relative;top:5px; }
.formsTogether { width:780px; }
.formsTogether .form1Part { width:75%; }

.additionalCopies { margin: 20px 6px; }

.advancedSearch td { padding-right:5px; text-align:right; vertical-align:top; width:5em; }

.advancedSearch label { text-align:right; }

.advancedSearch fieldset fieldset legend { visibility:hidden; line-height:0px; }

#accessibleForm .advancedSearch fieldset fieldset { border:none; padding:0; text-align:left; margin:0 0 6px 0; }

#alertMessage {
margin: auto;
font-size: 1.2em;
color: black;
text-align: center;
padding: 1em;
background-color: lightpink;
}

#alertMessage a {
    font-weight:bold;
}

#newMemberMessage {
    font-size: 1.125em;
    width: 50em;
    text-align: center;
    margin: auto;
}

.newMemberLogo {   
  display: inline;
  padding: 25px;
}

.availLimMessage { font-style:normal; }

.bibClear { clear:both; }

.bibDetail {  }

.bibDetail table { vertical-align:top; }

#bibDisplayBody { padding-top:5px; }

#bibDisplayBody a:link,#bibDisplayBody a:visited, #formLinks a:link,#formLinks a:visited, .recordPager a:link, .recordPager a:visited, .actionButtonArea a:link, .actionButtonArea a:visited, .bibPager a:visited, .bibPager a:link { color: #014184; font-family:Arial,"Arial Unicode MS",Helvetica,Verdana,sans-serif; font-weight:bold; padding:6px 5px 3px 0px; text-decoration:none; width:auto; }

#bibDisplayBody a:active,#bibDisplayBody a:hover,#formLinks a:active,#formLinks a:hover, .recordPager a:active, .recordPager a:hover, .actionButtonArea a:active, .actionButtonArea a:hover, .bibPager a:active, .bibPager a:hover { text-decoration:none; }

#bibDisplayBody .bibVol a:link, #bibDisplayBody .bibVol a:visited { font-family:"Trebuchet MS",Verdana,Arial,Helvetica,sans-serif; }

.bibDisplayContent { padding:10px 0 10px 10px; }

.bibDisplayContentMain, .resourceDisplayContentMain  { float:left; width:76%; margin-left:1.5em; display:inline; }

.bibDisplayContentMain table, .bibDisplayUrls table, table.reserveBibs, .resourceDisplayContentMain table, .bibDisplayReviews  { border:0; font-size:.8824em; }

.bibDisplayContentMain table table, .bibDisplayUrls table table, .resourceDisplayContentMain table table  { font-size:1em; }

.bibDisplayContentMain > a, .resourceDisplayContentMain > a { margin:4px 4px 4px 9%; border:none; }

.bibDisplayContentMore { border-top:1px dashed #767C70; clear:both; margin-bottom:15px; padding-top:20px; }
/* ... */

